--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,114 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>{{ page.title }}</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>{{ page.title }} | {{ site.title }}</title>
+    <meta name="description" content="{{ site.description }}" />
+    <meta name="author" content="{{ site.author }}" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Michael Greifeneder, Java, Linux, Android" />
+    <meta name="copyright" content="Copyright 2011 to Present"/>
+    <meta name="google-site-verification" content="" />
+	<link href="{{ site.url }}/feed" rel="alternate" title="MG's RSS feed" type="application/rss+xml" />
+    <link href="http://google.com/profiles/michael.greifeneder" rel="home" />
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link type="text/css" rel="stylesheet" media="screen, projection" href="/css/screen.css" /> 
+    <link type="text/css" rel="stylesheet" media="all" href="/css/custom.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" ></script>
+    <!--[if lt IE 8]>
+      <link type="text/css" rel="stylesheet" media="screen, projection" href="/css/ie.css" />
+    <![endif]--> 
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+	<script type="text/javascript">
+			WebFontConfig = {
+			  custom: { families: ['DroidSansRegular', 'YanoneKaffeesatzRegular'],
+				urls: [ 'http://tjstein.com/css/screen.css' ] }
+			};
 
-<body>
-<h1>{{ page.title }}</h1>
+	      (function() {
+	        document.getElementsByTagName("html")[0].className += " wf-loading";
+	        var wf = document.createElement('script');
+	        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+			'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	        wf.type = 'text/javascript';
+	        wf.async = 'true';
+	        var s = document.getElementsByTagName('script')[0];
+	        s.parentNode.insertBefore(wf, s);
+	      })();
+	</script>
+  </head>
+  <body>
+    <div class="container">
+      <header class="span-21 last" id="header">
+        <h1><a href="{{ site.url }}" rel="home bookmark">{{ site.title }}</a></h1>
+      </header>
 
-{{ content }}
-</body>
+      <div class="span-16" id="content">
+        {{ content }}
+      </div>
+      <div class="span-5 last" id="sidebar">
+        <div class="sidebarbox"> 
+          <h4>Pages</h4> 
+          <ul id="pages"> 
+            <li> 
+              <a rel="bookmark" title="About" href="{{ site.url }}/about">About</a> 
+            </li> 
+            <li> 
+              <a rel="bookmark" title="Links" href="{{ site.url }}/links">Links</a> 
+            </li>
+            <li> 
+              <a rel="bookmark" title="Archives" href="{{ site.url }}/archives" id="archives">Archives</a> 
+            </li>
+          </ul>
+        </div>
+        <div class="sidebarbox"> 
+          <h4>Subscribe</h4> 
+          <ul> 
+            <li> 
+              <a title="RSS Feed" href="{{ site.url }}/feed" class="icon-link" id="feed-link">RSS</a> 
+            </li> 
+          </ul> 
+        </div> 
+        <div class="sidebarbox"> 
+          <h4>Me Elsewhere</h4> 
+          <ul> 
+            <li> 
+              <a rel="bookmark" title="Facebook" href="http://facebook.com/michael.greifeneder" class="icon-link" id="facebook-link">Facebook</a> 
+            </li> 
+            <li> 
+              <a rel="bookmark" title="Twitter" href="http://twitter.com/mikegr" class="icon-link" id="twitter-link">Twitter</a> 
+            </li> 
+            <li> 
+              <a rel="bookmark" title="GitHub" href="http://github.com/mikegr" class="icon-link" id="github-link">GitHub</a> 
+            </li> 
+          </ul> 
+        </div>
+        <div class="sidebarbox"> 
+          <h4>Contact Me</h4> 
+          <ul> 
+            <li> 
+              <a rel="bookmark" title="Email" href="mailto:mikegr@gmx.net" class="icon-link" id="gmail-link">Gmail</a> 
+            </li> 
+            <li> 
+              <a rel="bookmark" title="Skype" href="skype:mikegr2510?chat" class="icon-link" id="skype-link">Skype</a> 
+            </li> 
+          </ul> 
+        </div> 
+      </div>
+
+      <footer class="span-21 last" id="footer">
+        <p>All content copyright &copy; Michael Greifeneder.</p>
+		<p>Powered by <a href="http://github.com/mojombo/jekyll" title="The Jekyll (static site generator) code repository" rel="external" target="_blank">Jekyll</a>.</p>
+      </footer>
+    </div>
+
+    {% include disqus.html %}
+    {% include google_analytics.html %}
+	<script src="/js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+  </body>
 </html>
