--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
           <h4>Contact Me</h4> 
           <ul> 
             <li> 
-              <a rel="bookmark" title="Email" href="mailto:mikegr@gmx.net" class="icon-link" id="gmail-link">Gmail</a> 
+              <a rel="bookmark" title="Email" href="mailto:michael.greifeneder@gmail.com" class="icon-link" id="gmail-link">Gmail</a> 
             </li> 
             <li> 
               <a rel="bookmark" title="Skype" href="skype:mikegr2510?chat" class="icon-link" id="skype-link">Skype</a> 
