--- a/css/custom.css
+++ b/css/custom.css
@@ -164,6 +164,10 @@ a#gmail-link {
 a#skype-link {
     background: url("/images/sprite.png") no-repeat scroll -9px -188px transparent;
 }
+a#facebook-link {
+	background: url("/images/facebook.jpg") no-repeat scroll -9px -188px transparent;
+}
+
 .pagination {
     font-size: 1.2em;
     margin: 10px;
